--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,18 +8,20 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity
+            android:name=".MainActivity"
+            android:theme="@style/Theme.AppCompat.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
-        <activity android:name=".SignupDegreeActivity"/>
-        <activity android:name=".SignupPortfolioActivity"/>
-        <activity android:name=".SignupTermsAgreeActivity"/>
-        <activity android:name=".SignupTermsDetailActivity"/>
+        <activity android:name=".SignupDegreeActivity" />
+        <activity android:name=".SignupPortfolioActivity" />
+        <activity android:name=".SignupTermsAgreeActivity" />
+        <activity android:name=".SignupTermsDetailActivity" />
+        <activity android:name=".SelectActivity"></activity>
     </application>
 
 </manifest>
