--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,19 +8,20 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name="com.rinc.bong.rivatorproject.MainActivity">
+        <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="com.rinc.bong.rivatorproject.SignupDegreeActivity" />
-        <activity android:name="com.rinc.bong.rivatorproject.SignupPortfolioActivity" />
-        <activity android:name="com.rinc.bong.rivatorproject.SignupTermsAgreeActivity" />
-        <activity android:name="com.rinc.bong.rivatorproject.SignupTermsDetailActivity" />
-        <activity android:name="com.rinc.bong.rivatorproject.SelectActivity" />
-        <activity android:name="com.rinc.bong.rivatorproject.TeacherSignUpActivity"></activity>
+        <activity android:name=".SignupDegreeActivity" />
+        <activity android:name=".SignupPortfolioActivity" />
+        <activity android:name=".SignupTermsAgreeActivity" />
+        <activity android:name=".SignupTermsDetailActivity" />
+        <activity android:name=".SelectActivity" />
+        <activity android:name=".TeacherSignUpActivity" />
+        <activity android:name=".StudentMainActivity"></activity>
     </application>
 
 </manifest>
