회원가입 화면에서 이미지 어셋을 적용하고 액션바들을 수정했습니다

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,8 @@
         <activity android:name=".SignupPortfolioActivity" android:windowSoftInputMode="adjustResize|stateHidden"/>
         <activity android:name=".SignupTermsAgreeActivity"  />
         <activity android:name=".SignupTermsDetailActivity"  />
-        <activity android:name=".SelectActivity" />
+        <activity android:name=".SelectActivity"
+            android:theme="@style/AppTheme.ActionBar.Transparent"/>
         <activity android:name=".TeacherSignUpActivity" />
         <activity android:name=".StudentSignUpActivity"></activity>
     </application>
