--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,28 +40,26 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     compile 'com.android.support:appcompat-v7:25.0.0'
-    compile 'com.ssomai:android.scalablelayout:2.1.1'
-    compile 'com.android.support.constraint:constraint-layout:1.0.2'
-    compile 'com.android.support:design:25.0.0'
-    compile 'com.android.support:appcompat-v7:25.0.0'
-    compile 'com.android.support:cardview-v7:25.0.0'
 
     // ButterKnife
-    compile 'com.jakewharton:butterknife:8.7.0'
-    annotationProcessor 'com.jakewharton:butterknife:8.7.0'
-    apt "com.jakewharton:butterknife-compiler:8.7.0"
-
-    compile 'com.github.ittianyu:BottomNavigationViewEx:1.2.1'
-    compile 'com.android.support:support-v4:25.3.1'
+    
 
     //Glide
-    compile 'com.github.bumptech.glide:glide:4.0.0-RC1'
     compile 'com.android.support:support-v4:25.3.1'
-    annotationProcessor 'com.github.bumptech.glide:compiler:4.0.0-RC1'
-    testCompile 'junit:junit:4.12'
-
+    
     //Custom Indicator
+    compile 'com.android.support.constraint:constraint-layout:1.0.2'
+    compile 'com.android.support:design:25.0.0'
+    compile 'com.android.support:cardview-v7:25.0.0'
+    compile 'com.jakewharton:butterknife:8.7.0'
+    compile 'com.github.ittianyu:BottomNavigationViewEx:1.2.1'
+    compile 'com.android.support:support-v4:25.3.1'
+    compile 'com.github.bumptech.glide:glide:4.0.0-RC1'
     compile 'me.relex:circleindicator:1.2.2@aar'
+    testCompile 'junit:junit:4.12'
+    annotationProcessor 'com.jakewharton:butterknife:8.7.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.0.0-RC1'
+    apt 'com.jakewharton:butterknife-compiler:8.7.0'
 }
 
 
