--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,6 +33,7 @@
         <activity android:name=".activitys.HomeActivity"
             android:theme="@style/AppTheme.ActionBar.Transparent"/>
         <activity android:name=".activitys.NoticeActivity"/>
+        <activity android:name=".activitys.HomeWorkActivity"/>
     </application>
 
 </manifest>
