--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,6 +35,8 @@
         <activity android:name=".activitys.NoticeActivity"/>
         <activity android:name=".activitys.HomeWorkActivity"/>
         <activity android:name=".activitys.ProjectActivity"/>
+        <activity android:name=".activitys.LectureManagementActivity"/>
+        <activity android:name=".activitys.ContestManagementActivity"/>
     </application>
 
 </manifest>
