--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,13 +46,15 @@ dependencies {
 
     //Custom Indicator
     compile 'com.android.support:support-v4:25.3.1'
+    //바텀 네비게이션뷰
+    
+
     compile 'com.android.support:support-v4:25.3.1'
     compile 'com.android.support:appcompat-v7:25.0.0'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.android.support:design:25.0.0'
     compile 'com.android.support:cardview-v7:25.0.0'
     compile 'com.jakewharton:butterknife:8.7.0'
-    //바텀 네비게이션뷰
     compile 'com.github.ittianyu:BottomNavigationViewEx:1.2.2'
     compile 'com.github.bumptech.glide:glide:4.0.0-RC1'
     compile 'me.relex:circleindicator:1.2.2@aar'
@@ -60,8 +62,7 @@ dependencies {
     annotationProcessor 'com.jakewharton:butterknife:8.7.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.0.0-RC1'
     apt 'com.jakewharton:butterknife-compiler:8.7.0'
-
-    provided "org.projectlombok:lombok:1.12.6"
+    provided 'org.projectlombok:lombok:1.12.6'
 }
 
 
