--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.rinc.bong.rivatorproject">
 
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
@@ -30,13 +30,16 @@
             android:theme="@style/AppTheme.ActionBar.Transparent" />
         <activity android:name=".activitys.TeacherSignUpActivity" />
         <activity android:name=".activitys.StudentSignUpActivity" />
-        <activity android:name=".activitys.HomeActivity"
-            android:theme="@style/AppTheme.ActionBar.Transparent"/>
-        <activity android:name=".activitys.NoticeActivity"/>
-        <activity android:name=".activitys.HomeWorkActivity"/>
-        <activity android:name=".activitys.ProjectActivity"/>
-        <activity android:name=".activitys.LectureManagementActivity"/>
-        <activity android:name=".activitys.ContestManagementActivity"/>
+        <activity
+            android:name=".activitys.HomeActivity"
+            android:theme="@style/AppTheme.ActionBar.Transparent" />
+        <activity android:name=".activitys.NoticeActivity" />
+        <activity android:name=".activitys.HomeWorkActivity" />
+        <activity android:name=".activitys.ProjectActivity" />
+        <activity android:name=".activitys.LectureManagementActivity" />
+        <activity android:name=".activitys.ContestManagementActivity" />
+        <activity android:name=".activitys.CalendarActivity"
+            android:theme="@style/AppTheme.ActionBar.Transparent"></activity>
     </application>
 
 </manifest>
