로그인 액티비티 구성 완료

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -38,8 +38,10 @@
         <activity android:name=".activitys.ProjectActivity" />
         <activity android:name=".activitys.LectureManagementActivity" />
         <activity android:name=".activitys.ContestManagementActivity" />
-        <activity android:name=".activitys.CalendarActivity"
-            android:theme="@style/AppTheme.ActionBar.Transparent"></activity>
+        <activity
+            android:name=".activitys.CalendarActivity"
+            android:theme="@style/AppTheme.ActionBar.Transparent" />
+        <activity android:name=".activitys.LoginActivity"></activity>
     </application>
 
 </manifest>
