프로젝트 정보 액티비티 작성 (1)

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -41,7 +41,8 @@
         <activity
             android:name=".activitys.CalendarActivity"
             android:theme="@style/AppTheme.ActionBar.Transparent" />
-        <activity android:name=".activitys.LoginActivity"></activity>
+        <activity android:name=".activitys.LoginActivity" />
+        <activity android:name=".activitys.ProjectInformationActivity"></activity>
     </application>
 
 </manifest>
