프로젝트 정보 액티비티 레이아웃 수정

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -42,7 +42,8 @@
             android:name=".activitys.CalendarActivity"
             android:theme="@style/AppTheme.ActionBar.Transparent" />
         <activity android:name=".activitys.LoginActivity" />
-        <activity android:name=".activitys.ProjectInformationActivity"></activity>
+        <activity android:name=".activitys.ProjectInformationActivity"
+            android:theme="@style/AppTheme.ActionBar.Transparent"/>
     </application>
 
 </manifest>
