--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,16 +33,21 @@
         <activity
             android:name=".activitys.HomeActivity"
             android:theme="@style/AppTheme.ActionBar.Transparent" />
-        <activity android:name=".activitys.NoticeActivity"
-            android:theme="@style/AppTheme.ActionBar.Transparent"/>
-        <activity android:name=".activitys.HomeWorkActivity"
-            android:theme="@style/AppTheme.ActionBar.Transparent"/>
-        <activity android:name=".activitys.ProjectActivity"
-            android:theme="@style/AppTheme.ActionBar.Transparent"/>
-        <activity android:name=".activitys.LectureManagementActivity"
-            android:theme="@style/AppTheme.ActionBar.Transparent"/>
-        <activity android:name=".activitys.ContestManagementActivity"
-            android:theme="@style/AppTheme.ActionBar.Transparent"/>
+        <activity
+            android:name=".activitys.NoticeActivity"
+            android:theme="@style/AppTheme.ActionBar.Transparent" />
+        <activity
+            android:name=".activitys.HomeWorkActivity"
+            android:theme="@style/AppTheme.ActionBar.Transparent" />
+        <activity
+            android:name=".activitys.ProjectActivity"
+            android:theme="@style/AppTheme.ActionBar.Transparent" />
+        <activity
+            android:name=".activitys.LectureManagementActivity"
+            android:theme="@style/AppTheme.ActionBar.Transparent" />
+        <activity
+            android:name=".activitys.ContestManagementActivity"
+            android:theme="@style/AppTheme.ActionBar.Transparent" />
         <activity
             android:name=".activitys.CalendarActivity"
             android:theme="@style/AppTheme.ActionBar.Transparent" />
@@ -51,7 +56,8 @@
             android:name=".activitys.ProjectInformationActivity"
             android:theme="@style/AppTheme.ActionBar.Transparent" />
         <activity android:name=".activitys.PasswordModifyActivity" />
-        <activity android:name=".activitys.ProfileModifyActivity"></activity>
+        <activity android:name=".activitys.ProfileModifyActivity" />
+        <activity android:name=".activitys.AccountAdvancementActivity"></activity>
     </application>
 
 </manifest>
