--- a/app/build.gradle
+++ b/app/build.gradle
@@ -64,6 +64,7 @@ dependencies {
     apt 'com.jakewharton:butterknife-compiler:8.7.0'
     provided 'org.projectlombok:lombok:1.12.6'
     compile 'com.google.firebase:firebase-messaging:10.2.6'
+    compile 'com.squareup.retrofit2:retrofit:2.3.0'
     apply plugin: 'com.google.gms.google-services'
 }
 
