--- a/app/build.gradle
+++ b/app/build.gradle
@@ -65,6 +65,7 @@ dependencies {
     provided 'org.projectlombok:lombok:1.12.6'
     compile 'com.google.firebase:firebase-messaging:10.2.6'
     compile 'com.squareup.retrofit2:retrofit:2.3.0'
+    compile 'com.github.satyan:sugar:1.5'
     apply plugin: 'com.google.gms.google-services'
 }
 
