Retrofit Utill 추가

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,15 +40,6 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
 
-    // ButterKnife
-
-    //Glide
-
-    //Custom Indicator
-    //바텀 네비게이션뷰
-
-
-    compile 'com.android.support:support-v4:25.3.1'
     compile 'com.android.support:support-v4:25.3.1'
     compile 'com.android.support:appcompat-v7:25.0.0'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
@@ -65,7 +56,9 @@ dependencies {
     provided 'org.projectlombok:lombok:1.12.6'
     compile 'com.google.firebase:firebase-messaging:10.2.6'
     compile 'com.squareup.retrofit2:retrofit:2.3.0'
+    compile 'com.squareup.retrofit2:converter-gson:2.0.2'
     compile 'com.github.satyan:sugar:1.5'
+    compile 'com.google.code.gson:gson:2.6.2'
     apply plugin: 'com.google.gms.google-services'
 }
 
