--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,6 +56,7 @@ dependencies {
     provided 'org.projectlombok:lombok:1.12.6'
     compile 'com.google.firebase:firebase-messaging:10.2.6'
     compile 'com.squareup.retrofit2:retrofit:2.3.0'
+    compile 'de.hdodenhof:circleimageview:2.1.0'
     compile 'com.squareup.retrofit2:converter-gson:2.0.2'
     compile 'pub.devrel:easypermissions:0.2.0'
     compile 'com.github.satyan:sugar:1.5'
