--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,7 +47,7 @@ dependencies {
     compile 'com.android.support:cardview-v7:25.0.0'
     compile 'com.jakewharton:butterknife:8.7.0'
     compile 'com.github.ittianyu:BottomNavigationViewEx:1.2.2'
-    compile 'com.github.bumptech.glide:glide:4.0.0-RC1'
+    compile 'com.github.bumptech.glide:glide:3.7.0'
     compile 'me.relex:circleindicator:1.2.2@aar'
     testCompile 'junit:junit:4.12'
     annotationProcessor 'com.jakewharton:butterknife:8.7.0'
