--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -45,7 +45,7 @@
         <activity android:name=".controller.activitys.StudentSignUpActivity" />
         <activity
             android:name=".controller.activitys.HomeActivity"
-            android:theme="@style/AppTheme.NoActionBar"
+            android:theme="@style/AppTheme.ActionBar.Transparent"
             />
         <activity
             android:name=".controller.activitys.NoticeActivity"
