강좌 후기 작성 / 읽기 기능 추가

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -81,8 +81,11 @@
         <activity android:name=".controller.activitys.ProjectAddActivity" />
         <activity android:name=".controller.activitys.CourseAddActivity" />
         <activity android:name=".controller.activitys.ContestAddActivity" />
-        <activity android:name=".controller.activitys.ContestDetailActivity"
-            android:theme="@style/AppTheme.ActionBar.Transparent"></activity>
+        <activity
+            android:name=".controller.activitys.ContestDetailActivity"
+            android:theme="@style/AppTheme.ActionBar.Transparent" />
+        <activity android:name=".controller.activitys.CourseReviewDetailActivity" />
+        <activity android:name=".controller.activitys.CourseReviewWriteActivity"></activity>
     </application>
 
 </manifest>
