--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,10 +1,7 @@
 apply plugin: 'com.android.application'
-apply plugin: 'me.tatarka.retrolambda'
-apply plugin: 'com.neenbedankt.android-apt'
-
 android {
     compileSdkVersion 26
-    buildToolsVersion '26.0.1'
+    buildToolsVersion '26.0.2'
     defaultConfig {
         applicationId "com.rinc.bong.rivatorproject"
         minSdkVersion 19
@@ -28,9 +25,6 @@ android {
 buildscript {
     repositories {
         mavenCentral()
-    }
-    dependencies {
-        classpath 'me.tatarka:gradle-retrolambda:3.2.2'
     }
 }
 
@@ -59,7 +53,7 @@ dependencies {
     testCompile 'junit:junit:4.12'
     annotationProcessor 'com.jakewharton:butterknife:8.7.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.0.0-RC1'
-    apt 'com.jakewharton:butterknife-compiler:8.7.0'
+    annotationProcessor 'org.projectlombok:lombok:1.12.6'
     provided 'org.projectlombok:lombok:1.12.6'
 }
 apply plugin: 'com.google.gms.google-services'
